# Sat-vivification-playground

./: CMakeLists.txt  CnfTester.h  Preprocessor.cpp  Preprocessor.h  QBFTester.cpp  QBFTester.h  convert_to_qcir.py  fastpreprocessing.cpp  fastpreprocessing.h  main.cpp  preprocessing.cpp  preprocessing.h  qcir-conv.py  qcir-to-qdimacs.py  test-qbfuzz.cpp  test_correctnes.sh  types.h  watchedliteralspreprocessing.cpp  watchedliteralspreprocessing.h  watchedpreprocessing.cpp  watchedpreprocessing.h
FasterCnfProcessing/: CnfFormula.cpp  CnfFormula.h  CnfReaderWriter.cpp  CnfReaderWriter.h  Readme.md  main.cpp
cadical/: internal.hpp
miniQu-with-preprocessing/: Makefile
miniQu-with-preprocessing/minisat/core/: Main.cc  Preprocessor.cc  Preprocessor.h  QBFParser.cc  QBFParser.h  QCIRParser.cc  QDIMACSParser.cpp  QDIMACSParser.h
miniQu-without-preprocessing/: Makefile
miniQu-without-preprocessing/minisat/utils/: System.cc
qbf-preprocessing/: input-parser.cpp  input-parser.h  main.cpp  pure_propagation.cpp  pure_propagation.h  sat_vivify.cpp  sat_vivify.h  types.h  unit_propagation.cpp  unit_propagation.h  vivify.cpp  vivify.h
sat-preprocessor/: combinedpreprocessing.cpp  combinedpreprocessing.h  main.cpp  proceess_file.sh  run-bench.sh  run-cluster.sh  sortedwatchedliteralpreprocessing.cpp  sortedwatchedliteralpreprocessing.h  watchedliteralspreprocessing.cpp  watchedliteralspreprocessing.h
sat-solving/: CSVWriter.cpp  CSVWriter.h  CnfTester.cpp  CnfTester.h  combinedpreprocessing.cpp  combinedpreprocessing.h  fastpreprocessing.cpp  fastpreprocessing.h  main.cpp  preprocessing.cpp  preprocessing.h  sortedwatchedliteralpreprocessing.cpp  sortedwatchedliteralpreprocessing.h  sortedwatchedliteralpreprocessing2.cpp  sortedwatchedliteralpreprocessing2.h  watchedliteralspreprocessing.cpp  watchedliteralspreprocessing.h  watchedpreprocessing.cpp
testcases/: CNF_1.cnf  CNF_10.cnf  CNF_11.cnf  CNF_12.cnf  CNF_13.cnf  CNF_14.cnf  CNF_15.cnf  CNF_16.cnf  CNF_17.cnf  CNF_18.cnf  CNF_2.cnf  CNF_3.cnf  CNF_4.cnf  CNF_5.cnf  CNF_6.cnf  CNF_7.cnf  CNF_8.cnf
